# pc-doctor

./: .gitignore  README.md  package-lock.json  package.json
scripts/: checksums.ps1
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/templates/: installer.nsi
